frontend/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tierlist-frontend-deployment
  namespace: tierlist-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tierlist-frontend
  template:
    metadata:
      labels:
        app: tierlist-frontend
      annotations:
    spec:
      containers:
        - name: tierlist-frontend
          image: duk9741/tierlist-frontend:16
          ports:
            - containerPort: 80
