frontend/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tierlist-frontend-service
  namespace: tierlist-frontend
spec:
  selector:
    app: tierlist-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
