frontend/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tierlist-frontend-ingress
  namespace: tierlist-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: dev.tierlist.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tierlist-frontend-service
            port:
             number: 80
  tls:
    - hosts:
      - dev.tierlist.site
      secretName: tierlist-frontend-cert
